--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>hu.zza.screen</groupId>
-    <artifactId>screen</artifactId>
+    <artifactId>PoC</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -16,14 +23,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>5.10.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.dataformat</groupId>
-            <artifactId>jackson-dataformat-xml</artifactId>
-            <version>2.16.0</version>
+            <groupId>com.github.hu-zza</groupId>
+            <artifactId>screen</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
